Sat Mar 22 12:28:45 1997  Gray Watson  <gray@burger.letters.com>

	* Added return-address tracking for gcc on alphas.  Thanks
        Alexandre.

Fri Mar 21 09:29:46 1997  Gray Watson  <gray@burger.letters.com>

	* Released version 3.2.1.

	* Added to dmalloc the ability to recognize its internal tags.

	* Added better documentation of auto-dmalloc_shutdown.

	* Cleaned up some configuration stuff.

	* Fixed a number of signed/unsigned problems in chunk.

Thu Mar 20 15:45:59 1997  Gray Watson  <gray@burger.letters.com>

	* Removed autoconf rule in Makefile.all.

	* Cleaned up pthreads locking delay code.

Fri Jan 17 14:25:12 1997  Gray Watson  <gray@burger.letters.com>

	* Releasing version 3.2.0.

	* Added catch-signals debug token (about time, huh Marty?)

	* Revamped autoconf scripts to be more standard.

	* New signal handling.

Thu Jan 16 15:22:06 1997  Gray Watson  <gray@burger.letters.com>

	* Moved to memcpy and memcmp from the b routines.

	* Fixed the locking for pthread programs.  Dumb errors.

	* Ran new fillproto on h-files.  IMPORT -> extern.

Thu Dec 28 20:39:00 1995  Gray Watson  <gray@burger.letters.com>

	* Releasing version 3.1.3.

	* Added new argv versions to fix problems.

	* Don't allow silent dumps of test program.

Tue Dec 19 19:11:19 1995  Gray Watson  <gray@burger.letters.com>

	* Added registration subdirectory.

Mon Nov 20 22:14:14 1995  Gray Watson  <gray@burger.letters.com>

	* Removed some unresolved references in argv.c: strcasecmp, strdup.

	* Fixed some porting problems to Unixware.  Unsigned chars.

Mon Oct 21 00:23:51 1995  Gray Watson  <gray@burger.letters.com>

	* Fixed bug where I called display_pnt instead of display_where.

Tue Oct 10 18:43:09 1995  Gray Watson  <gray@burger.letters.com>

	* Releasing version 3.1.2.

Mon Sep 18 10:14:36 1995  Gray Watson  <gray@burger.letters.com>

	* Finally tested fore myself the configure --srcdir option.  Found
	lots of places with missing $(srcdir) entries.
